// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should be able to create models 1`] = `
Object {
  "id": 1101,
  "model": 2101,
  "name": "node 1",
  "x": 0,
  "y": 0,
}
`;

exports[`it should be able to create models 2`] = `
Object {
  "arrows": Array [],
  "name": "",
  "nodes": Array [
    Object {
      "id": 1101,
      "model": 2101,
      "name": "node 1",
      "x": 0,
      "y": 0,
    },
    Object {
      "id": 1102,
      "model": 2102,
      "name": "node 2",
      "x": 0,
      "y": 0,
    },
  ],
}
`;
